--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <section class="product_section layout_padding">
     <div class="d-flex justify-content-center">
       <h2 class="custom_heading">
-        Our Products
+        Christian Paltin
       </h2>
     </div>
     <div class="container layout_padding2">
