--- a/about.html
+++ b/about.html
@@ -50,13 +50,13 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Contenidos de la pagina <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="about.html"> IAAS </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="product.html"> Product </a>
+                  <a class="nav-link" href="product.html"> IMAGENES </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="client.html"> Client </a>
@@ -81,11 +81,10 @@
       <div class="container">
         <div class="detail">
           <h2 class="custom_heading">
-            About Us
+            Que es IAAS
           </h2>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of g it
+            La Infraestructura como Servicio (IaaS) es un modelo de cloud computing que ofrece recursos esenciales de proceso, almacenamiento y redes a petición que son de pago por uso. IaaS ayuda a reducir el mantenimiento de los centros de datos locales, a ahorrar dinero en los costes de hardware y a obtener información empresarial en tiempo real. Las soluciones de IaaS ofrecen la flexibilidad necesaria para escalar y reducir verticalmente los recursos de TI a petición. También ayudan a aprovisionar rápidamente nuevas aplicaciones y a aumentar la confiabilidad de la infraestructura subyacente. IaaS permite evitar el coste y la complejidad de comprar y administrar servidores físicos e infraestructura de centro de datos. Un proveedor de servicios informáticos en la nube administra la infraestructura, mientras que tú compras, instalas, configuras y administras tu propio software.
           </p>
           <div>
             <a href="">
@@ -95,8 +94,7 @@
         </div>
         <div class="detail-2">
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of g it
+            
           </p>
         </div>
       </div>
