--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="about.html"> IAAS </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="product.html"> Product </a>
@@ -74,31 +74,16 @@
       <div class="hero_detail">
         <h1>
           <span>
-            h
-          </span>
-          <span>
-            e
-          </span>
-          <span>
-            r
-          </span>
-          <span>
-            b
-          </span>
-          <span>
-            a
-          </span>
-          <span>
-            l
+            Contenidos de la pagina
           </span>
         </h1>
         <h3>
-          Natural product
+          Cloud computing
           </h2>
       </div>
       <div class="hero_btn-box">
         <a href="">
-          Contact Us
+          
         </a>
       </div>
     </section>
@@ -113,11 +98,10 @@
       <div class="container">
         <div class="detail">
           <h2 class="custom_heading">
-            About Us
+            Que es SAS
           </h2>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of g it
+            En el contexto de la computación en la nube, SAS se refiere a Software as a Service (SaaS) SaaS es un modelo de cloud computing que ofrece a los usuarios finales una aplicación de nube junto con toda su infraestructura de TI y plataformas subyacentes a través de un explorador de Internet. Los usuarios disfrutan de recursos y servicios informáticos a través de internet sin tener que gestionar la infraestructura, los sistemas operativos o el software. Los proveedores de SaaS se encargan del mantenimiento del software alojado en la nube.
           </p>
           <div>
             <a href="">
@@ -127,8 +111,7 @@
         </div>
         <div class="detail-2">
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of g it
+            
           </p>
         </div>
       </div>
@@ -146,7 +129,7 @@
       </h2>
     </div>
     <div class="container layout_padding2">
-      <div class="img-box box-1">
+      <div class="img-box box-2">
         <img src="images/p-1.jpg" alt="">
       </div>
       <div class="img-box box-2">
@@ -156,7 +139,6 @@
         <img src="images/p-3.jpg" alt="">
       </div>
       <div class="img-box box-4">
-        <img src="images/p-4.jpg" alt="">
       </div>
     </div>
     <div class="d-flex justify-content-center">
@@ -175,12 +157,10 @@
     <div class="container">
       <div class="d-flex flex-column align-items-center text-center">
         <h2 class="custom_heading ">
-          Why choose Us
+          Que es PAS
         </h2>
         <p class="">
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking
-          at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-          opposed to using 'Content here, content here', making it
+          PAS se refiere a Platform as a Service (PaaS). PaaS es un modelo que proporciona una plataforma completa —hardware, software e infraestructura— para desarrollar, ejecutar y gestionar aplicaciones sin el coste y la complejidad asociados a la creación y el mantenimiento de dicha plataforma en local. Los proveedores de PaaS alojan todo en su centro de datos y los clientes pueden pagar una tarifa fija o elegir el precio según uso para pagar solo los recursos que utilicen.
         </p>
       </div>
     </div>
