--- a/product.html
+++ b/product.html
@@ -81,7 +81,7 @@
   <section class="product_section layout_padding">
     <div class="d-flex justify-content-center">
       <h2 class="custom_heading">
-        Our Products
+        IMAGENES
       </h2>
     </div>
     <div class="container layout_padding2">
@@ -95,7 +95,7 @@
         <img src="images/p-3.jpg" alt="">
       </div>
       <div class="img-box box-4">
-        <img src="images/p-4.jpg" alt="">
+        
       </div>
     </div>
     <div class="d-flex justify-content-center">
